Adjust partition size to 2Mb

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ monitor_port = COM7
 debug_tool = jlink
 upload_protocol = jlink
 build_unflags = -Werror=all
+board_build.partitions = partitions.csv
