--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,11 @@
 platform = espressif32
 board = Node32s
 framework = espidf
-upload_port = COM7
+build_type=debug
+upload_port = COM5
+upload_protocol = esptool
 monitor_speed = 115200
-monitor_port = COM7
-debug_tool = jlink
-upload_protocol = jlink
+monitor_port = COM5
+debug_tool = esp-prog
 build_unflags = -Werror=all
 board_build.partitions = partitions.csv
