--- a/.gitignore
+++ b/.gitignore
@@ -73,8 +73,5 @@ Release/
 *.dll
 *.exe
 .pio
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/ipch
+.vscode/*
 *.old
