Add Pico board options

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,51 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:Node32s]
+[platformio]
+default_envs = pico32_debug
+
+[env]
 platform = espressif32
-board = Node32s
 framework = espidf
-build_type=debug
-upload_port = COM5
-upload_protocol = esptool
-monitor_speed = 115200
-monitor_port = COM5
-debug_tool = esp-prog
 build_unflags = -Werror=all
+
+[env:pico32]
+board = pico32
+upload_protocol = esp-prog
+build_type = release
+#board_build.partitions = pico32_partitions.csv
+build_flags =
+    -DRTOS_FREERTOS=y
+    -DPCB=PICO
+
+[env:pico32_debug]
+board = pico32
+upload_protocol = esp-prog
+build_type = debug
+debug_tool = esp-prog
+#debug_speed = 12000
+debug_init_break = tbreak setup
+#board_build.partitions = pico32_partitions.csv
+build_flags =
+    -DRTOS_FREERTOS=y
+    -DPCB=PICO
+
+[env:Node32s]
+board = Node32s
+upload_protocol = esptool
+upload_port = COM41
+debug_tool = esp-prog
 board_build.partitions = partitions.csv
+build_flags =
+    -DRTOS_FREERTOS=y
+    -DPCB=WROOM
+
+[env:C3Mini]
+board = esp32-c3-devkitm-1
+upload_protocol = esptool
+debug_tool = esp-prog
+build_flags =
+    -DRTOS_FREERTOS=y
+    -DPCB=C3MINI
+
+
