MasterBT Now connects and streams data

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,23 +16,21 @@ platform = espressif32
 framework = espidf
 build_unflags = -Werror=all
 
-[env:pico32]
+[env:pico32_debug]
 board = pico32
 upload_protocol = esp-prog
-build_type = release
-#board_build.partitions = pico32_partitions.csv
+debug_tool = esp-prog
+debug_speed = 3000
+debug_init_break = tbreak app_main
+build_type = debug
 build_flags =
     -DRTOS_FREERTOS=y
     -DPCB=PICO
 
-[env:pico32_debug]
+[env:pico32]
 board = pico32
-upload_protocol = esp-prog
-build_type = debug
-debug_tool = esp-prog
-#debug_speed = 12000
-debug_init_break = tbreak setup
-#board_build.partitions = pico32_partitions.csv
+upload_protocol = esptool
+build_type = release
 build_flags =
     -DRTOS_FREERTOS=y
     -DPCB=PICO
@@ -54,5 +52,4 @@ debug_tool = esp-prog
 build_flags =
     -DRTOS_FREERTOS=y
     -DPCB=C3MINI
-
 
