Add Wroom configuration

--- a/platformio.ini
+++ b/platformio.ini
@@ -35,12 +35,13 @@ build_flags =
     -DRTOS_FREERTOS=y
     -DPCB=PICO
 
-[env:Node32s]
+[env:Node32s_Wroom32]
 board = Node32s
 upload_protocol = esptool
 upload_port = COM41
-debug_tool = esp-prog
-board_build.partitions = partitions.csv
+monitor_port = COM41
+#debug_tool = esp-prog
+#sboard_build.partitions = partitions.csv
 build_flags =
     -DRTOS_FREERTOS=y
     -DPCB=WROOM
