Fix defines not updating for other boards

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ debug_init_break = tbreak app_main
 build_type = debug
 build_flags =
     -DRTOS_FREERTOS=y
-    -DPCB=PICO
+    -DPCB_PICO
 
 [env:pico32]
 board = pico32
@@ -33,7 +33,7 @@ upload_protocol = esptool
 build_type = release
 build_flags =
     -DRTOS_FREERTOS=y
-    -DPCB=PICO
+    -DPCB_PICO
 
 [env:Node32s_Wroom32]
 board = Node32s
@@ -44,7 +44,7 @@ monitor_port = COM41
 #sboard_build.partitions = partitions.csv
 build_flags =
     -DRTOS_FREERTOS=y
-    -DPCB=WROOM
+    -DPCB_WROOM
 
 [env:C3Mini]
 board = esp32-c3-devkitm-1
@@ -52,5 +52,5 @@ upload_protocol = esptool
 debug_tool = esp-prog
 build_flags =
     -DRTOS_FREERTOS=y
-    -DPCB=C3MINI
+    -DPCB_C3MINI
 
