fix non error case in circular buffer

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,7 @@ build_flags =
 [env:pico32]
 board = pico32
 upload_protocol = esptool
+monitor_speed = 115200
 build_type = release
 build_flags =
     -DRTOS_FREERTOS=y
