Add custom board file and partitions

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ upload_protocol = esp-prog
 debug_tool = esp-prog
 debug_speed = 3000
 debug_init_break = tbreak app_main
+board_build.partitions = pico_partitions.csv
 build_type = debug
 build_flags =
     -DRTOS_FREERTOS=y
@@ -32,6 +33,7 @@ board = pico32
 upload_protocol = esptool
 monitor_speed = 115200
 build_type = release
+board_build.partitions = pico_partitions.csv
 build_flags =
     -DRTOS_FREERTOS=y
     -DPCB_PICO
