Add BT_Perip mode, switching code, rename and move
Switching not functional,
Settings not working,
Perip Mode using demo code

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,10 +17,11 @@ framework = espidf
 build_unflags = -Werror=all
 
 [env:pico32_debug]
-board = pico32
-upload_protocol = esp-prog
+upload_protocol = esptool
+upload_port = COM9
+board = pico32_cust
 debug_tool = esp-prog
-debug_speed = 3000
+debug_speed = 6000
 debug_init_break = tbreak app_main
 board_build.partitions = pico_partitions.csv
 build_type = debug
@@ -29,7 +30,7 @@ build_flags =
     -DPCB_PICO
 
 [env:pico32]
-board = pico32
+board = pico32_cust
 upload_protocol = esptool
 monitor_speed = 115200
 build_type = release
