--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ build_unflags = -Werror=all
 
 [env:pico32_debug]
 upload_protocol = esptool
-upload_port = COM9
+upload_port = COM41
 board = pico32_cust
 debug_tool = esp-prog
 debug_speed = 6000
@@ -27,7 +27,8 @@ board_build.partitions = pico_partitions.csv
 build_type = debug
 build_flags =
     -DRTOS_FREERTOS=y
-    -DPCB_PICO
+    -DPCB_PICO=y
+    -DCPU_ESP32=y
 
 [env:pico32]
 board = pico32_cust
@@ -37,7 +38,26 @@ build_type = release
 board_build.partitions = pico_partitions.csv
 build_flags =
     -DRTOS_FREERTOS=y
-    -DPCB_PICO
+    -DPCB_PICO=y
+    -DCPU_ESP32=y
+    -DBLUETOOTH=y
+
+[env:HappymodelEP82]
+platform = espressif8266
+board = esp8285
+board_build.ldscript = eagle.flash.1m144.ld
+upload_speed = 921600
+monitor_speed = 115200
+board_build.f_cpu = 160000000L
+upload_protocol = esptool
+upload_port = COM6
+build_type = release
+board_build.partitions = pico_partitions.csv
+build_flags =
+    -DRTOS_FREERTOS=y
+    -DPCB_PICO=y
+    -DCPU_ESP8285=y
+    -DSBUS_IN=y
 
 [env:Node32s_Wroom32]
 board = Node32s
@@ -48,7 +68,9 @@ monitor_port = COM41
 #sboard_build.partitions = partitions.csv
 build_flags =
     -DRTOS_FREERTOS=y
-    -DPCB_WROOM
+    -DPCB_WROOM=y
+    -DBLUETOOTH=y
+    -DCPU_ESP32=y
 
 [env:C3Mini]
 board = esp32-c3-devkitm-1
@@ -56,5 +78,7 @@ upload_protocol = esptool
 debug_tool = esp-prog
 build_flags =
     -DRTOS_FREERTOS=y
-    -DPCB_C3MINI
+    -DPCB_C3MINI=y
+    -DCPU_ESP32=y
+    -DBLUETOOTH=y
 
