Add workflows. Fix C3mini build

--- a/platformio.ini
+++ b/platformio.ini
@@ -62,20 +62,25 @@ build_flags =
 [env:Node32s_Wroom32]
 board = Node32s
 upload_protocol = esptool
-upload_port = COM41
-monitor_port = COM41
+monitor_speed = 115200
+#upload_port = COM41
+#monitor_port = COM41
 #debug_tool = esp-prog
 #sboard_build.partitions = partitions.csv
 build_flags =
     -DRTOS_FREERTOS=y
     -DPCB_WROOM=y
     -DBLUETOOTH=y
+    -DBLUETOOTH5=y
     -DCPU_ESP32=y
 
 [env:C3Mini]
 board = esp32-c3-devkitm-1
 upload_protocol = esptool
-debug_tool = esp-prog
+monitor_speed = 115200
+#upload_port = COM33
+#monitor_port = COM41
+#debug_tool = esptool
 build_flags =
     -DRTOS_FREERTOS=y
     -DPCB_C3MINI=y
