lowercase board name

--- a/platformio.ini
+++ b/platformio.ini
@@ -60,7 +60,7 @@ build_flags =
     -DSBUS_IN=y
 
 [env:Node32s_Wroom32]
-board = Node32s
+board = node32s
 upload_protocol = esptool
 monitor_speed = 115200
 #upload_port = COM41
