--- a/platformio.ini
+++ b/platformio.ini
@@ -78,8 +78,8 @@ build_flags =
 board = esp32-c3-devkitm-1
 upload_protocol = esptool
 monitor_speed = 115200
-#upload_port = COM33
-#monitor_port = COM41
+upload_port = COM21
+monitor_port = COM21
 #debug_tool = esptool
 build_flags =
     -DRTOS_FREERTOS=y
