Add RMPico Board

--- a/platformio.ini
+++ b/platformio.ini
@@ -71,7 +71,6 @@ build_flags =
     -DRTOS_FREERTOS=y
     -DPCB_WROOM=y
     -DBLUETOOTH=y
-    -DBLUETOOTH5=y
     -DCPU_ESP32=y
 
 [env:C3Mini]
@@ -86,4 +85,16 @@ build_flags =
     -DPCB_C3MINI=y
     -DCPU_ESP32=y
     -DBLUETOOTH=y
+    -DBLUETOOTH5=y
 
+[env:RM_pico]
+board = pico32_cust
+upload_protocol = esptool
+monitor_speed = 115200
+build_type = release
+board_build.partitions = pico_partitions.csv
+build_flags =
+    -DRTOS_FREERTOS=y
+    -DPCB_RMPICO=y
+    -DCPU_ESP32=y
+    -DBLUETOOTH=y
