Correct the right case :)

--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Build Firmware RM_pico
         run: |
           cd /src
-          pio run -e RM_Pico
+          pio run -e RM_pico
           
 
       # Runs a set of commands using the runners shell
