C3Mini_Change_Flash-Mode
Platform IO fix caused this issue..

--- a/platformio.ini
+++ b/platformio.ini
@@ -74,6 +74,7 @@ build_flags =
     -DCPU_ESP32=y
 
 [env:C3Mini]
+board_build.flash_mode: dio
 board = esp32-c3-devkitm-1
 upload_protocol = esptool
 monitor_speed = 115200
