--- a/platformio.ini
+++ b/platformio.ini
@@ -55,7 +55,7 @@ build_type = release
 board_build.partitions = pico_partitions.csv
 build_flags =
     -DRTOS_FREERTOS=y
-    -DPCB_PICO=y
+    -DPCB_HMEP82=y
     -DCPU_ESP8285=y
     -DSBUS_IN=y
 
@@ -63,7 +63,7 @@ build_flags =
 board = node32s
 upload_protocol = esptool
 monitor_speed = 115200
-#upload_port = COM41
+upload_port = COM4
 #monitor_port = COM41
 #debug_tool = esp-prog
 #sboard_build.partitions = partitions.csv
@@ -77,9 +77,26 @@ build_flags =
 board_build.flash_mode: dio
 board = esp32-c3-devkitm-1
 upload_protocol = esptool
+build_type = debug
 monitor_speed = 115200
-#upload_port = COM33
-#monitor_port = COM41
+upload_port = COM4
+monitor_port = COM4
+#debug_tool = esptool
+build_flags =
+    -DRTOS_FREERTOS=y
+    -DPCB_C3MINI=y
+    -DCPU_ESP32=y
+    -DBLUETOOTH=y
+    -DBLUETOOTH5=y
+
+[env:C3Mini_2]
+board_build.flash_mode: dio
+board = esp32-c3-devkitm-1
+upload_protocol = esptool
+build_type = debug
+monitor_speed = 115200
+upload_port = COM18
+monitor_port = COM18
 #debug_tool = esptool
 build_flags =
     -DRTOS_FREERTOS=y
