Enable coded mode on C3

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = pico32_debug
+default_envs = C3Mini
 
 [env]
 platform = espressif32
