--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,13 @@ default_envs = C3Mini
 [env]
 platform = espressif32
 framework = espidf
+upload_protocol = esptool
+board_build.filesystem = littlefs
+upload_speed = 921600
+monitor_speed = 921600
 build_unflags = -Werror=all
 
 [env:pico32_debug]
-upload_protocol = esptool
-upload_port = COM41
 board = pico32_cust
 debug_tool = esp-prog
 debug_speed = 6000
@@ -32,9 +34,6 @@ build_flags =
 
 [env:pico32]
 board = pico32_cust
-upload_protocol = esptool
-monitor_speed = 115200
-build_type = release
 board_build.partitions = pico_partitions.csv
 build_flags =
     -DRTOS_FREERTOS=y
@@ -46,12 +45,6 @@ build_flags =
 platform = espressif8266
 board = esp8285
 board_build.ldscript = eagle.flash.1m144.ld
-upload_speed = 921600
-monitor_speed = 115200
-board_build.f_cpu = 160000000L
-upload_protocol = esptool
-upload_port = COM6
-build_type = release
 board_build.partitions = pico_partitions.csv
 build_flags =
     -DRTOS_FREERTOS=y
@@ -61,12 +54,6 @@ build_flags =
 
 [env:Node32s_Wroom32]
 board = node32s
-upload_protocol = esptool
-monitor_speed = 115200
-upload_port = COM4
-#monitor_port = COM41
-#debug_tool = esp-prog
-#sboard_build.partitions = partitions.csv
 build_flags =
     -DRTOS_FREERTOS=y
     -DPCB_WROOM=y
@@ -74,30 +61,7 @@ build_flags =
     -DCPU_ESP32=y
 
 [env:C3Mini]
-board_build.flash_mode: dio
 board = esp32-c3-devkitm-1
-upload_protocol = esptool
-build_type = debug
-monitor_speed = 115200
-upload_port = COM4
-monitor_port = COM4
-#debug_tool = esptool
-build_flags =
-    -DRTOS_FREERTOS=y
-    -DPCB_C3MINI=y
-    -DCPU_ESP32=y
-    -DBLUETOOTH=y
-    -DBLUETOOTH5=y
-
-[env:C3Mini_2]
-board_build.flash_mode: dio
-board = esp32-c3-devkitm-1
-upload_protocol = esptool
-build_type = debug
-monitor_speed = 115200
-upload_port = COM18
-monitor_port = COM18
-#debug_tool = esptool
 build_flags =
     -DRTOS_FREERTOS=y
     -DPCB_C3MINI=y
@@ -107,9 +71,6 @@ build_flags =
 
 [env:RM_pico]
 board = pico32_cust
-upload_protocol = esptool
-monitor_speed = 115200
-build_type = release
 board_build.partitions = pico_partitions.csv
 build_flags =
     -DRTOS_FREERTOS=y
