modified:   platformio.ini 	new file:   sdkconfig.C3SuperMini 	modified:   src/defines.h

--- a/platformio.ini
+++ b/platformio.ini
@@ -116,3 +116,18 @@ build_flags =
     -DPCB_RMPICO=y
     -DCPU_ESP32=y
     -DBLUETOOTH=y
+
+[env:C3SuperMini]
+board_build.flash_mode: dio
+board = esp32-c3-devkitm-1
+#debug_tool = esptool 
+upload_protocol = esptool
+monitor_speed = 115200
+upload_port = /dev/ttyACM0
+monitor_port = /dev/ttyACM0
+build_flags =
+    -DRTOS_FREERTOS=y
+    -DPCB_C3SUPERMINI=y
+    -DCPU_ESP32=y
+    -DBLUETOOTH=y
+    -DBLUETOOTH5=y
